@@ -31,7 +31,7 @@
           token=ovwtoken
           urltoken=urltoken
           urlview=urlview
-          nodename=nodeName(path(child))
+          nodename=nodeName(child)
           comment=nodeParam(child,'comment',1);
       END;
     END;
